--- a/src/assets/styles/Footer.scss
+++ b/src/assets/styles/Footer.scss
@@ -1,5 +1,5 @@
 .footer {
-    background-color: black;
+    background-color: #292929;
     color: white;
 }
 
@@ -8,17 +8,18 @@
 }
 
 .footer-logo {
-    margin-left: 7rem;
+    margin-left: 3rem;
     text-align: left;
+    width: 30rem;
 }
 
 .footer-navigation {
-    margin-left: 5rem;
+    margin-left: 6rem;
     text-align: left;
 }
 
 .footer-download {
-    margin-left: 3rem;
+    margin-left: 9rem;
     margin-right: 7rem;
     text-align: left;
 }
@@ -55,7 +56,7 @@
 }
 
 .footer-copyright {
-    background-color: black;
+    background-color: #292929;
     color: white;
 
 }
