--- a/src/assets/styles/Header.scss
+++ b/src/assets/styles/Header.scss
@@ -1,11 +1,25 @@
 .header {
     display: flex;
-    margin-bottom: 2rem;
+    padding-bottom: 2rem;
     justify-content: space-around;
+    padding-top: 2rem;
+    background-color: #292929;
+    color: white;
+    padding-left: 6rem;
+}
+
+.header-title {
+    color: #ffa31a;
+}
+
+.header img {
+    width: 5rem;
+    height: 5rem;
+    margin-left: -6rem;
 }
 
 .header h1 {
-    margin-left: -6rem;
+    margin-left: -12rem;
 }
 
 .header input {
