[Yogie] - minor tweaks

--- a/src/assets/styles/Footer.scss
+++ b/src/assets/styles/Footer.scss
@@ -3,6 +3,11 @@
     color: white;
 }
 
+.footer-title {
+    background-color: #ffa31a;
+    color: black;
+}
+
 .footer-content {
     display: flex;
 }
