--- a/src/assets/styles/Homepage.scss
+++ b/src/assets/styles/Homepage.scss
@@ -73,7 +73,11 @@
 }
 
 .homepage-content-1 {
-    display: flex
+    display: grid;
+    grid-template-columns: auto auto auto auto auto;
+    grid-gap: 0;
+    padding: 0;
+    margin-left: 4rem;
 }
 
 .homepage-content-1 img {
@@ -116,5 +120,10 @@
     text-align: center;
     color: black;
     font-weight: bolder;
-    font-size: 1rem;
+    font-size: 0.8rem;
+    width: 10rem;
+}
+
+.movie-list p {
+    margin-left: 1rem;
 }
