--- a/src/assets/sass/ReviewPage.scss
+++ b/src/assets/sass/ReviewPage.scss
@@ -69,32 +69,32 @@
       }
     }
 
-    .Review {
-      .form,
-      .list {
-        .avatar {
-          img {
-            margin: 1.5rem;
-            margin-left: 0;
-            width: 100px;
-            border-radius: 4px;
-          }
-        }
-        .reviews {
-          width: 100%;
-          h3 {
-            margin-bottom: 0;
-          }
-          .starts {
-            margin: 0.5rem 0 1rem;
-          }
-          textarea {
-            width: 100%;
-            padding: 1rem;
-          }
-        }
-      }
-    }
+    // .Review {
+    //   .form,
+    //   .list {
+    //     .avatar {
+    //       img {
+    //         margin: 1.5rem;
+    //         margin-left: 0;
+    //         width: 100px;
+    //         border-radius: 4px;
+    //       }
+    //     }
+    //     .reviews {
+    //       width: 100%;
+    //       h3 {
+    //         margin-bottom: 0;
+    //       }
+    //       .starts {
+    //         margin: 0.5rem 0 1rem;
+    //       }
+    //       textarea {
+    //         width: 100%;
+    //         padding: 1rem;
+    //       }
+    //     }
+    //   }
+    // }
   
   
   
