--- a/src/assets/styles/Header.scss
+++ b/src/assets/styles/Header.scss
@@ -29,9 +29,10 @@
 }
 
 .header img {
-    width: 5rem;
-    height: 5rem;
-    margin-left: -6rem;
+    width: 2rem;
+    height: 2rem;
+    margin-left: -12rem;
+    margin-top: 0.4rem;
 }
 
 .header h1 {
@@ -43,6 +44,7 @@
     height: 2rem;
     margin-left: -8rem;
     margin-top: 0.5rem;
+    margin-right: 2rem;
 }
 
 a:link {
@@ -63,8 +65,8 @@ a {
   }
 
   .profile {
-    width: 3rem;
-    height: 3rem;
+    width: 1rem;
+    height: 1rem;
     border-radius: 50%;
     object-fit: cover;
     margin-left: 2rem;
@@ -115,4 +117,8 @@ a {
 
   .profile-wrapper:hover .dropdown {
     display: block;
+  }
+
+  .profile-container {
+    display: flex;
   }
