--- a/src/assets/sass/Homepage.scss
+++ b/src/assets/sass/Homepage.scss
@@ -112,7 +112,7 @@
 }
 
 .homepage-pagination {
-    margin-left: 32rem;
+    margin-left: 10rem;
     margin-bottom: 1rem;
 }
 
@@ -127,4 +127,8 @@
 .movie-list p {
     margin-left: 1rem;
     margin-top: -2rem;
+}
+
+.ant-pagination {
+    margin-right: 2rem;
 }
