--- a/src/assets/sass/DescriptionPage.scss
+++ b/src/assets/sass/DescriptionPage.scss
@@ -48,8 +48,9 @@
 .description {
   display: block ;
   img {
-    width: 90%;
-    height: 10%;
+    width: 50%;
+    height: 500px;
+
   }
 }
 .banner {
