--- a/src/assets/sass/ReviewPage.scss
+++ b/src/assets/sass/ReviewPage.scss
@@ -25,6 +25,7 @@
         border: none;
         border-radius: 3vh;
         width: 100px;
+        height: 100%;
       }
     }
     &__ratings {
@@ -69,32 +70,157 @@
       }
     }
 
-    // .Review {
-    //   .form,
-    //   .list {
-    //     .avatar {
-    //       img {
-    //         margin: 1.5rem;
-    //         margin-left: 0;
-    //         width: 100px;
-    //         border-radius: 4px;
-    //       }
-    //     }
-    //     .reviews {
-    //       width: 100%;
-    //       h3 {
-    //         margin-bottom: 0;
-    //       }
-    //       .starts {
-    //         margin: 0.5rem 0 1rem;
-    //       }
-    //       textarea {
-    //         width: 100%;
-    //         padding: 1rem;
-    //       }
-    //     }
-    //   }
-    // }
+  //   // .Review {
+  //   //   .form,
+  //   //   .list {
+  //   //     .avatar {
+  //   //       img {
+  //   //         margin: 1.5rem;
+  //   //         margin-left: 0;
+  //   //         width: 100px;
+  //   //         border-radius: 4px;
+  //   //       }
+  //   //     }
+  //   //     .reviews {
+  //   //       width: 100%;
+  //   //       h3 {
+  //   //         margin-bottom: 0;
+  //   //       }
+  //   //       .starts {
+  //   //         margin: 0.5rem 0 1rem;
+  //   //       }
+  //   //       textarea {
+  //   //         width: 100%;
+  //   //         padding: 1rem;
+  //   //       }
+  //   //     }
+  //   //   }
+  //   // }
+
+  // @import 'mixin';
+
+// .banner-wrapper{
+//     background-color: #858585;
+//     // background-image: url("../images/jojo_rabbit.jpg");
+//     height: 44rem;
+//     background-position: center;
+//     background-repeat: no-repeat;
+//     background-size: cover;
+//     box-shadow:inset 0 0 0 2000px rgba(0, 0, 0, 0.5);
+//     .banner-text{
+//         color: white;
+//     }
+    
+//     h3{
+//         font-size: 2rem;
+//         text-transform: uppercase;
+//     }
+    
+//     .banner-title{
+//         padding-top: 8rem;
+//     }
+// }
+
+
+// .content-wrapper{
+//     background-color: #191919;
+//     color: white;
+//     padding-bottom: 1rem;
+//     padding-top: 1rem;
+//     .overview-tabs{
+//         padding: 0 6em;
+//         // @include tabs
+//     }
+//     .content-divider{
+//         padding-left: 4rem;
+//         padding-right: 4rem;
+//     }
+    
+//     .content-text{
+//         padding-left: 5rem;
+//         padding-right: 5rem;
+//     }
+// }
+
+// .banner-btn{
+//     margin-right: 2rem;
+//     outline: none;
+//     background: none;
+//     border: 2px solid;
+//     border-radius: 7px;
+//     width: 8rem;
+// }
+
+// .btn-trailer{
+//     border-color:#E50914;
+//     box-shadow: 1px 1px 6px #E50914;
+//     color: #E50914;
+// }
+
+// .btn-trailer:focus{
+//     border-color:#E50914;
+//     box-shadow: 1px 1px 6px #E50914;
+//     color: #E50914;
+//     background-color: transparent;
+// }
+
+// .btn-trailer:hover{
+//     background: none;
+//     border-color:#E50914;
+//     color: white;
+//     transition: 0.3s ease;
+//     background-color: #E50914;
+// }
+
+// .btn-watchlist{
+//     border-color: white;
+//     color: white;
+// }
+
+// .btn-watchlist:focus{
+//     border-color: white;
+//     color: white;
+//     background-color: transparent;
+// }
+
+// .btn-watchlist:hover{
+//     border-color: white;
+//     color: #858585;
+//     transition: 0.3s ease;
+//     background-color: white;
+// }
+
+// .btn-trailer:active, .btn-watchlist:active{
+//     transform: translateY(5px);
+// }
+
+// //for modal
+
+// .trailer-modal{
+//     width: 80%;
+//     height: 50%;
+//     margin-left: 200px;
+//     background-color: #858585;
+//     z-index: 1;
+// }
+
+// .modal-header{
+//     text-align: right;
+// }
+
+// .modal__trailer{
+//     .ant-modal-content{
+//         background-color: #191919 !important;
+//         border-radius: 20px !important;
+//     }
+//     .ant-modal-close-icon{
+//         color: #858585;
+//     }
+//     .ant-modal-close-icon:hover{
+//         color: white;
+//     }
+// }
+
   
   
   
